cmake_minimum_required(VERSION 3.1)
set(CMAKE_CXX_STANDARD 11)

set(CMAKE_BUILD_TYPE Release)

project( VideoStream )

if(WIN32)
set (OpenCV_DIR c:/usr/local/lib/opencv/build/x64/vc15/lib)
endif()

find_package( OpenCV REQUIRED )

if(WIN32)
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DUSE_FLIR=1")
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
	set(TCLLIB tcl86t_64)
	set(TACOPIE tacopie_64)
	include_directories("c:/usr/local/include" "C:/Program Files/Point Grey Research/Spinnaker/include")
	link_directories("c:/usr/local/lib64" "c:/usr/local/lib" "C:/Program Files/Point Grey Research/Spinnaker/lib64/vs2015")
	set(DGLIB dg)
	set(FLIRLIB Spinnaker_v140)
elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
	set(TACOPIE tacopie)
	set(TCLLIB tcl86t)
	set(LABLIB lablib)
endif()
elseif(APPLE)
	set(TCLLIB tcl8.6)
	set(TACOPIE tacopie)
	set(DGLIB dg)
	set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS}")
	link_directories(/usr/local/lib)
else()
	find_library(LIBDL dl)
	find_library(LIBPTHREAD pthread)
	set(TCLLIB tcl8.6)
	set(TACOPIE tacopie)
	set(FLIRLIB Spinnaker)
	set(DGLIB dg)
	set(TCL_INCLUDE_DIR /usr/include/tcl8.6)
	set(FLIR_INCLUDE_DIR /usr/include/spinnaker)
	set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wno-conversion-null -DUSE_FLIR=1")
	add_definitions(-DUSE_FLIR=1)
endif()

include_directories( ${OpenCV_INCLUDE_DIRS} ${TCL_INCLUDE_DIR} ${FLIR_INCLUDE_DIR} )
add_executable( VideoStream VideoStream.cpp tclproc.c tclcode.cpp )
target_link_libraries( VideoStream ${OpenCV_LIBS} ${TACOPIE} ${TCLLIB} ${LIBPTHREAD} ${FLIRLIB} ${LIBDL} ${DGLIB} )
